# cash-buyer-scraper

./: .env.example  .gitignore  Cash Buyer Pool Upload API — Documentation.md  LICENSE  README.md  pyproject.toml
cash_buyer_intel/: __init__.py  cli.py  db.py  dedup.py  scoring.py
cash_buyer_intel/dispenser/: __init__.py  api.py  auth.py  dispense.py  jobs.py
docs/: dispenser.md  known-blockers-2026-05-19.md
docs/propstream/: README.md  cdp-list-id-capture.md  export-cash-buyers.md  export-preforeclosure.md  export-vacant-equity-absentee.md
scripts/: init.sh  smoke-test.sh
